# GoIT21_13_2

project10/: .env  pyproject.toml
project10/app_author/: forms.py
project10/app_quotes/: forms.py  urls.py  views.py
